# coordinate-wordle

./: README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: index.html
src/coordinate_wordle.egg-info/: PKG-INFO  SOURCES.txt
src/coordle/: __init__.py  api.py  cli.py  config.py  engine.py  functions.py  geometry.py  plotting.py
tests/: test_engine.py  test_functions.py
web/: index.html
